--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.11.2",
     "build": "^0.1.4",
     "firebase": "^9.17.1",
     "font-awesome": "^4.7.0",
